--- a/front/package.json
+++ b/front/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.9.2",
+    "papaparse": "^4.6.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-file-reader": "^1.1.4",
     "react-scripts": "1.1.5"
   },
   "scripts": {
@@ -13,5 +16,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy":"http://localhost:3001"
+  "proxy": "http://localhost:3001"
 }
